# my_plane_detection_ros-master

./: CMakeLists.txt  CMakeListsbk.txt  al.drawio  test_set.cpp
Darwin-op/src/darwin_controller/: CMakeLists.txt  package.xml  publish_joint_noDCC.txt
Darwin-op/src/darwin_controller/include/darwin_controller/: control.h  control_interface.h
Darwin-op/src/darwin_controller/include/darwin_controller/Chz_Control_lib/: Chz_Base.h  Chz_Calculator.cpp  Chz_Calculator.h  Chz_Filter.h  Chz_RobotType.h  Chz_Spline.cpp  Chz_Spline.h
Darwin-op/src/darwin_controller/src/: IKBlock.cpp  NumIKBlock.cpp  conio_lc.h  control.cpp  control_interface.cpp  interface.cpp  main.cpp
Darwin-op/src/darwin_controller/src/CHZ/: CHZBlock.cpp
Darwin-op/src/darwin_controller/src/Chz_Control_lib/: Chz_Filter.cpp
Darwin-op/src/darwin_controller/src/ControlFrameWalkBasic/: Core copy.cppbk  Core.cpp  Parameters.cpp
Darwin-op/src/darwin_controller/src/DCC/: DCCBlock.cpp
Darwin-op/src/darwin_controller/src/DCM_Walk/: Block.cpp  Reset.cpp
Darwin-op/src/darwin_controller/src/JointInterpolation/: JointInterpolationBlock.cpp
Darwin-op/src/darwin_controller/src/NetPath/: Block.cpp  FootPolygon.cpp
Darwin-op/src/darwin_controller/src/NetRemote/: Block.cpp
Darwin-op/src/darwin_controller/src/PostureKF/: Block.cpp
Darwin-op/src/darwin_controller/src/QPFD/: Block.cpp  LGuiPrint.cpp  Math.cpp  Solve.cpp
Darwin-op/src/darwin_controller/src/Remote/: Block.cpp  CalCmdVel.cpp  CoppDemoFootHolds.cpp
Darwin-op/src/darwin_controller/src/Switch/: Block.cpp
Darwin-op/src/darwin_controller/src/control_frame/: BHR_ControlFrame.cpp  BHR_Log.cpp  CalBodyZMP.cpp  ControlFrameFrictionTest.cpp  WorldToLocalFrame.cpp  estFootForce.cpp
Darwin-op/src/darwin_controller/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp  imgui_tables.cpp  imgui_widgets.cpp
Darwin-op/src/darwin_controller/src/imgui_/: DataVisualization.cpp  Initialization.cpp  RtPlotSimple.cpp  Run.cpp
Darwin-op/src/darwin_controller/src/implot/: implot.cpp  implot_demo.cpp  implot_items.cpp
Darwin-op/src/darwin_controller/src/tools/: ImuRevision.cpp  Integrator.cpp  InterpolationTest.cpp  Others.cpp  SimpleDynamicsFeedForward.cpp  TraSum.cpp
Darwin-op/src/darwin_controller/test/: a.out  keyboard.cpp  test_control.cpp  test_keyboard.cpp
bag/: bag_to_images.py  filted_pc_condition.pcd  heightmap_pc.pcd  main.cpp  pic.drawio  regiongrowingprocess copy.drawio  regiongrowingprocess.drawio  topic_to_image.py
bag/climb_steps_bag/: expriment_stairs.drawio  result_stairs.drawio
bag/climbed_steps_new/resize_data/: readme.txt
bag/inclined_plane/: inclined_result.drawio
bag/paper/: heightmap.drawio  outliner copy.drawio  outliner.drawio
bag/robot/: heightmap.drawio  robot.drawio  swing_track.drawio
bag/walk_step/: cutting_polygen.drawio  expriment_step_with_obstacles.drawio  fit_polygen.drawio  result.drawio  result_step_with_obstacles.drawio
include/libxl/: IAutoFilterT.h  IBookT.h  IConditionalFormatT.h  IConditionalFormattingT.h  IFilterColumnT.h  IFontT.h  IFormControlT.h  IFormatT.h  IRichStringT.h  ISheetT.h  enum.h  libxl.h  setup.h
include/plane_detection/: load_parameter.h  plane_new.h  plane_segmentation.h  type.h
launch/: plane_detection_bag.launch
src/: plane_new.cpp  plane_segmentation.cpp  quadtree_new.cpp  quatree_node.cpp
test/: test_segmentation.cpp
(+74 files in other folders)
